<resources>
    <string name="app_name">FestivalNotification</string>
    <string name="artiste">Nom de l\'artiste / groupe : </string>
    <string name="description">Description de l\'artiste / groupe : </string>
    <string name="facebook">Facebook de l\'artiste / groupe : </string>
    <string name="scene">Type de scene : </string>
    <string name="jour">Jour du concert : </string>
    <string name="heure">Heure du concert : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>